...
                    SliverAppBar(
                      floating: true,
                      snap: true,
                      backgroundColor: Colors.transparent,
                      elevation: 0,
                      title: Text(
                        'Nearby Dishes',
                        style: Theme.of(context).textTheme.headlineLarge,
                      ),
                      centerTitle: false,
                      actions: [
                        IconButton(
                          icon: const Icon(Icons.map_outlined),
...
